secretsmanagement/hcv/nginx/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: hcv
  name: nginx-service
  labels:
    app: nginx-t-m1
spec:
  selector:
    app: nginx-t-m1
  ports:
  - port: 80
    name: ngx
    targetPort: 80
